<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- Home Tab -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.zuvy.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_videoPlayer"
            app:destination="@id/videoPlayerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_home_to_folderBrowser"
            app:destination="@id/folderBrowserFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_home_to_playlistDetail"
            app:destination="@id/playlistDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_up" />
    </fragment>

    <!-- Music Tab -->
    <fragment
        android:id="@+id/musicFragment"
        android:name="com.zuvy.app.ui.music.MusicFragment"
        android:label="@string/nav_music"
        tools:layout="@layout/fragment_music">
        <action
            android:id="@+id/action_music_to_musicPlayer"
            app:destination="@id/musicPlayerFragment"
            app:enterAnim="@anim/slide_up" />
        <action
            android:id="@+id/action_music_to_artistDetail"
            app:destination="@id/artistDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_music_to_albumDetail"
            app:destination="@id/albumDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>

    <!-- Discover Tab -->
    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.zuvy.app.ui.discover.DiscoverFragment"
        android:label="@string/nav_discover"
        tools:layout="@layout/fragment_discover">
        <action
            android:id="@+id/action_discover_to_onlinePlayer"
            app:destination="@id/onlinePlayerFragment" />
    </fragment>

    <!-- More Tab -->
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.zuvy.app.ui.more.MoreFragment"
        android:label="@string/nav_more"
        tools:layout="@layout/fragment_more">
        <action
            android:id="@+id/action_more_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_moreFragment_to_premiumFragment"
            app:destination="@id/premiumFragment"
            app:enterAnim="@anim/slide_up" />
        <action
            android:id="@+id/action_moreFragment_to_equalizerFragment"
            app:destination="@id/equalizerFragment"
            app:enterAnim="@anim/slide_up" />
    </fragment>

    <!-- Video Player -->
    <fragment
        android:id="@+id/videoPlayerFragment"
        android:name="com.zuvy.app.ui.player.VideoPlayerFragment"
        android:label="@string/now_playing"
        tools:layout="@layout/fragment_video_player">
        <argument
            android:name="videoUri"
            app:argType="string" />
        <argument
            android:name="videoName"
            android:defaultValue="Video"
            app:argType="string" />
    </fragment>

    <!-- Music Player -->
    <fragment
        android:id="@+id/musicPlayerFragment"
        android:name="com.zuvy.app.ui.player.MusicPlayerFragment"
        android:label="@string/now_playing"
        tools:layout="@layout/fragment_music_player" />

    <!-- Folder Browser -->
    <fragment
        android:id="@+id/folderBrowserFragment"
        android:name="com.zuvy.app.ui.home.folders.FolderBrowserFragment"
        android:label="@string/folders"
        tools:layout="@layout/fragment_folder_browser">
        <argument
            android:name="folderPath"
            app:argType="string" />
        <argument
            android:name="folderName"
            android:defaultValue="Folder"
            app:argType="string" />
        <action
            android:id="@+id/action_folderBrowser_to_videoPlayer"
            app:destination="@id/videoPlayerFragment" />
    </fragment>

    <!-- Playlist Detail -->
    <fragment
        android:id="@+id/playlistDetailFragment"
        android:name="com.zuvy.app.ui.home.playlists.PlaylistDetailFragment"
        android:label="@string/playlists"
        tools:layout="@layout/fragment_playlist_detail">
        <argument
            android:name="playlistId"
            app:argType="long" />
        <argument
            android:name="playlistName"
            android:defaultValue="Playlist"
            app:argType="string" />
        <action
            android:id="@+id/action_playlistDetail_to_videoPlayer"
            app:destination="@id/videoPlayerFragment" />
    </fragment>

    <!-- Artist Detail -->
    <fragment
        android:id="@+id/artistDetailFragment"
        android:name="com.zuvy.app.ui.music.ArtistDetailFragment"
        android:label="Artist"
        tools:layout="@layout/fragment_artist_detail">
        <argument
            android:name="artistName"
            app:argType="string" />
        <argument
            android:name="artistId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <!-- Album Detail -->
    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="com.zuvy.app.ui.music.AlbumDetailFragment"
        android:label="Album"
        tools:layout="@layout/fragment_album_detail">
        <argument
            android:name="albumName"
            app:argType="string" />
        <argument
            android:name="artistName"
            android:defaultValue="Unknown Artist"
            app:argType="string" />
        <argument
            android:name="albumId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <!-- Online Player -->
    <fragment
        android:id="@+id/onlinePlayerFragment"
        android:name="com.zuvy.app.ui.player.OnlinePlayerFragment"
        android:label="@string/now_playing"
        tools:layout="@layout/fragment_online_player" />

    <!-- Settings -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.zuvy.app.ui.more.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Search -->
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.zuvy.app.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_videoPlayer"
            app:destination="@id/videoPlayerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_search_to_musicPlayer"
            app:destination="@id/musicPlayerFragment"
            app:enterAnim="@anim/slide_up" />
    </fragment>

    <!-- Premium Fragment -->
    <fragment
        android:id="@+id/premiumFragment"
        android:name="com.zuvy.app.premium.PremiumFragment"
        android:label="Premium"
        tools:layout="@layout/fragment_premium" />

    <!-- Equalizer Fragment -->
    <fragment
        android:id="@+id/equalizerFragment"
        android:name="com.zuvy.app.ui.player.EqualizerFragment"
        android:label="@string/equalizer"
        tools:layout="@layout/fragment_equalizer" />

</navigation>
